fix(Front/Menu): Add transitioning contrast on button state

--- a/front/src/styles/shadows.scss
+++ b/front/src/styles/shadows.scss
@@ -5,6 +5,10 @@
   box-shadow: $g0 $g0 $g0 $g0 * -1 $grey-light;
 }
 
+@mixin s0d {
+  box-shadow: $g0 $g0 $g0 $g0 * -1 $grey-deep;
+}
+
 @mixin s1 {
   box-shadow: $p0 $p0 $p0 * 2 $g0 * -1 $grey-deep;
 }
